--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <head>
+    <h2> REILLYS LIFE </h2>
+  </head>
+  <body>
+    
+  </body>
+</html>
